--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
     <ul>
         <li><a href="recipes/japanese-sunomono.html">Japanese Cucumber Sunomono</a></li>
-        <li><a href="/recipes/japanese-nabeyaki-udon.html">Japanese Nabeyaki Udon Soup</a></li>
-        <li><a href="/recipes/beef-miso-ramen.html">Beef Miso Ramen</a></li>
-        <li><a href="/recipes/nigiri-sushi.html">Nigiri Sushi</a></li>
+        <li><a href="recipes/japanese-nabeyaki-udon.html">Japanese Nabeyaki Udon Soup</a></li>
+        <li><a href="recipes/beef-miso-ramen.html">Beef Miso Ramen</a></li>
+        <li><a href="recipes/nigiri-sushi.html">Nigiri Sushi</a></li>
     </ul>
 </body>
 </html>
